styling the new highlight to fix an issue on small tablets, adding margin for image links to create more space and styling bullet points and text for lists on shaded background

--- a/src/components/Contentful/sass/components/_new_design_overrides.scss
+++ b/src/components/Contentful/sass/components/_new_design_overrides.scss
@@ -231,6 +231,23 @@ ul li:before {
     + .contentful-grid.yellow {
       margin: initial;
     }
+
+    ul {
+      list-style: disc;
+      color: $mt-green;
+      ::before {
+        width: 8px !important;
+        height: 8px !important;
+      }
+      li {
+        p {
+          font-size: $px20;
+          line-height: $px30;
+          font-weight: $medium;
+          color: $black;
+        }
+      }
+    }
   }
 
   &.white {
